feat(api): return is_alive param for /entpoints (#13)
* make is_alive as query param

* use blockchainID for /endpoints req

* add check for blockchainID in GetEndpoints
