# internal/api/handlers.go
@@ -32,6 +32,7 @@ func (a *api) getEndpoints(ctx echo.Context) error {
 
 		limit            = defaultLimit
 		format           = jsonOutputFormat
+		isAlive          *bool
 		isRpc            *bool
 		isValidator      *bool
 		asnCountries     []string
@@ -39,6 +40,13 @@ func (a *api) getEndpoints(ctx echo.Context) error {
 		supportedMethods []string
 	)
 
+	// TODO: in future will be as a query param
+	blockchainID, ok := a.blockchainIDs[solanaBlockchain]
+	if !ok {
+		err = fmt.Errorf("getEndpoints: fail to get blockchainID")
+		log.Logger.Api.Errorf(err.Error())
+		return err
+	}
 	if paramString := ctx.QueryParam("limit"); paramString != "" {
 		limit, err = strconv.Atoi(paramString)
 		if err != nil || limit > maxLimit || limit < minLimit {
@@ -51,6 +59,14 @@ func (a *api) getEndpoints(ctx echo.Context) error {
 		}
 
 		format = paramString
+	}
+	if paramString := ctx.QueryParam("is_alive"); paramString != "" {
+		paramLocal, err := strconv.ParseBool(paramString)
+		if err != nil {
+			return echo.NewHTTPError(http.StatusBadRequest, "is_alive")
+		}
+
+		isAlive = &paramLocal
 	}
 	if paramString := ctx.QueryParam("is_rpc"); paramString != "" {
 		paramLocal, err := strconv.ParseBool(paramString)
@@ -87,7 +103,7 @@ func (a *api) getEndpoints(ctx echo.Context) error {
 		}
 	}
 
-	res, err := a.storage.GetEndpoints(solanaBlockchain, limit, isRpc, isValidator, asnCountries, versions, supportedMethods)
+	res, err := a.storage.GetEndpoints(blockchainID, limit, isAlive, isRpc, isValidator, asnCountries, versions, supportedMethods)
 	if err != nil {
 		log.Logger.Api.Errorf("GetEndpoints: %s", err)
 		return err
@@ -103,6 +119,7 @@ func (a *api) getEndpoints(ctx echo.Context) error {
 				Network:     r.AsnInfo.Network,
 				Country:     r.AsnInfo.Country.Name,
 				Isp:         r.AsnInfo.Isp,
+				IsAlive:     r.IsAlive,
 				IsRpc:       r.IsRpc,
 				IsValidator: r.IsValidator,
 			}
