# swagger/swagger.yaml
@@ -24,14 +24,21 @@ paths:
           schema:
             type: string
             enum: [ json, csv, haproxy ]
+        - name: is_alive
+          in: query
+          schema:
+            type: boolean
+          description: is_alive is true means that endpoint supports at least one rpc method
         - name: is_rpc
           in: query
           schema:
             type: boolean
+          description: is_rpc is true means that endpoint supports all top20 rpc methods
         - name: is_validator
           in: query
           schema:
             type: boolean
+          description: is_validator is true means that endpoint is acting as a validator
         - name: asn_country
           in: query
           schema:
@@ -73,8 +80,8 @@ paths:
               schema:
                 type: string
                 example: |
-                  endpoint,version,ntw_as,network,country,is_rpc,is_validator
-                  127.0.0.1:80,1.14.10,201814,192.168.0.1/24,United States,true,true
+                  endpoint,version,ntw_as,network,country,is_alive,is_rpc,is_validator
+                  127.0.0.1:80,1.14.10,201814,192.168.0.1/24,United States,true,true,false
             text/plain:
               schema:
                 type: string
@@ -109,6 +116,8 @@ components:
                 type: integer
                 example: 1000
                 description: in milliseconds
+        is_alive:
+          type: boolean
         is_rpc:
           type: boolean
         is_validator:
